# native-kit

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile  README.md
djinni/: native-kit.djinni  nk.gyp
djinni/build_ios/nk.xcodeproj/: project.pbxproj
djinni/build_ios/nk.xcodeproj/project.xcworkspace/xcuserdata/paulo.xcuserdatad/: UserInterfaceState.xcuserstate
djinni/build_ios/nk.xcodeproj/xcuserdata/paulo.xcuserdatad/xcschemes/: All.xcscheme  libhelloworld_jni.xcscheme  libhelloworld_objc.xcscheme  xcschememanagement.plist
djinni/sample/NatikeKitTest/NatikeKitTest/: AppDelegate.swift  BHeader.h  NatikeKitTest-Bridging-Header.h  ViewController.swift  dummy.mm
djinni/sample/NatikeKitTest/NatikeKitTest.xcodeproj/: project.pbxproj
djinni/sample/NatikeKitTest/NatikeKitTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
djinni/sample/NatikeKitTest/NatikeKitTest.xcodeproj/project.xcworkspace/xcshareddata/: NatikeKitTest.xcscmblueprint
djinni/sample/NatikeKitTest/NatikeKitTest.xcodeproj/project.xcworkspace/xcuserdata/paulo.xcuserdatad/: UserInterfaceState.xcuserstate
djinni/sample/NatikeKitTest/NatikeKitTest.xcodeproj/xcuserdata/paulo.xcuserdatad/xcschemes/: NatikeKitTest.xcscheme  xcschememanagement.plist
djinni/sample/NatikeKitTest/NatikeKitTest.xcworkspace/: contents.xcworkspacedata
djinni/sample/NatikeKitTest/NatikeKitTest.xcworkspace/xcuserdata/paulo.xcuserdatad/: UserInterfaceState.xcuserstate
djinni/sample/NatikeKitTest/NatikeKitTest/NativeSource/: HttpClientImpl.hpp
djinni/sample/NatikeKitTest/NatikeKitTest/NativeSource/djinni/http/: HttpClient.djinni
djinni/sample/NatikeKitTest/NatikeKitTest/NativeSource/source/http/: HttpClient.cpp
docker/: Dockerfile
examples/desktop/: main.cpp
generator/curl-android/: build.sh  setenv-android.sh
generator/curl-android-2/: build.sh
generator/curl-android-2/jni/: crypto.mk
generator/curl-android/jni/: ssl.mk
generator/curl-macos/: build.sh
generator/examples-macos/: CMakeLists.txt  build.sh
generator/libz-android/: build.sh
generator/native-kit-android/: build.sh
generator/native-kit-android/jni/: Android.mk  Application.mk
generator/native-kit-macos/: CMakeLists.txt  build.sh
generator/openssl-android/: build.sh  setenv-android.sh
generator/openssl-android/tmp/: openssl-1.1.0.log-arm64-v8a  openssl-1.1.0.log-armeabi  openssl-1.1.0.log-armeabi-v7a  openssl-1.1.0.log-mips  openssl-1.1.0.log-mips64  openssl-1.1.0.log-x86  openssl-1.1.0.log-x86_64  openssl-1.1.0.tar.gz.sha1
generator/openssl-macos/: build.sh
generator/zlib-android/: build.sh
generator/zlib-macos/: build.sh
projects/curl-android/: build.sh
projects/curl-ios/: build.sh
projects/curl-linux64/: build.sh
projects/native-kit-android/: .project
projects/native-kit-android/app/: CMakeLists.txt  build.gradle
projects/native-kit-android/app/src/main/: AndroidManifest.xml
projects/native-kit-android/app/src/main/cpp/: native_kit_wrap.cpp
projects/native-kit-android/app/src/main/java/com/prsolucoes/nativekit/: HttpClient.java  NativeKit.java  NativeKitJNI.java
projects/native-kit-android/app/src/main/java/com/prsolucoes/nativekit/ui/: MainActivity.java
projects/native-kit-android/app/src/main/res/layout/: activity_main.xml
projects/native-kit-android/app/src/test/java/com/prsolucoes/nativekit/: HttpClientTest.java
projects/native-kit-ios/: CMakeLists.txt  build.sh
projects/native-kit-linux64/: CMakeLists.txt  build.sh
projects/native-kit-macos/: CMakeLists.txt  build.sh
projects/openssl-android/: build.sh
projects/openssl-ios/: build.sh
projects/openssl-linux64/: build.sh
projects/zlib-android/: build.sh
projects/zlib-ios/: build.sh
projects/zlib-linux64/: build.sh
source/http/: HttpClient.cpp  HttpClient.h  HttpClient.hpp  HttpClientImpl.cpp  HttpClientImpl.hpp
swig/: NativeKit.i  swig-android.sh
tests/: CMakeLists.txt  build.sh
tests/http/: HttpClientTest.cpp
